--- a/grapthql/src/main/resources/application.properties
+++ b/grapthql/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 logging.level.org.springframework=debug
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb
-
 graphql.servlet.mapping=/catalogos
+catalogs.separator =,
