Se agregan scripts para cargar informacion y se quita el CRUD

--- a/grapthql/src/main/resources/application.properties
+++ b/grapthql/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 logging.level.org.springframework=debug
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
-graphql.servlet.mapping=/catalogos
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=false;
+#graphql.servlet.mapping=/catalogos
+#graphiql.mapping: /graphiql
+#graphiql.endpoint: /service/api/query
 catalogs.separator =,
