--- a/grapthql/pom.xml
+++ b/grapthql/pom.xml
@@ -40,19 +40,19 @@
 <!-- 		</dependency> -->
 		
 		<dependency>
-  			<groupId>com.graphql-java</groupId>
+  			<groupId>com.graphql-java-kickstart</groupId>
   			<artifactId>graphql-spring-boot-starter</artifactId>
-  			<version>5.0.2</version>
+  			<version>11.0.0</version>
 		</dependency>
 		<dependency>
-  			<groupId>com.graphql-java</groupId>
+  			<groupId>com.graphql-java-kickstart</groupId>
   			<artifactId>graphql-java-tools</artifactId>
-  			<version>5.2.4</version>
+  			<version>11.0.0</version>
 		</dependency>
 		<dependency>
-  			<groupId>com.graphql-java</groupId>
+  			<groupId>com.graphql-java-kickstart</groupId>
   			<artifactId>graphiql-spring-boot-starter</artifactId>
-  			<version>5.0.2</version>
+  			<version>11.0.0</version>
 		</dependency>
 		
 		<dependency>
